Implemented basic implementation of the API and updated README.md

--- a/FinalProject.opam
+++ b/FinalProject.opam
@@ -12,6 +12,11 @@ bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "dune" {>= "3.20"}
   "ocaml"
+  "lwt"
+  "yojson"
+  "lwt_ppx"
+  "lwt_ssl"
+  "cohttp-lwt-unix"
   "odoc" {with-doc}
 ]
 build: [
