--- a/bin/dune
+++ b/bin/dune
@@ -2,3 +2,9 @@
  (public_name FinalProject)
  (name main)
  (libraries FinalProject))
+
+(executable
+ (name api)
+ (public_name api)
+ (libraries cohttp-lwt-unix yojson lwt.unix lwt_ssl)
+ (preprocess (pps lwt_ppx)))
