Add comprehensive test suite for optimizer module

--- a/test/dune
+++ b/test/dune
@@ -6,3 +6,7 @@
  (name test_refresh)
  (instrumentation (backend bisect_ppx))
  (libraries ounit2 FinalProject api lwt.unix bisect_ppx.runtime bisect_ppx.common))
+
+(test
+ (name test_optimizer)
+ (libraries ounit2 FinalProject bisect_ppx.runtime bisect_ppx.common))
