updated gallery.yaml, readme, and cache

--- a/gallery.yaml
+++ b/gallery.yaml
@@ -21,7 +21,7 @@ title: "OptiFolio"
 # OK if this is a Cornell Github link, but public gallery viewers won't be able to see it.
 git-repo: "https://github.coecis.cornell.edu/dz344/team80netheritetheta"
 # Replace the URL with your own demo video.
-demo-video-url: "https://youtu.be/7GTLF5OP0SI"
+demo-video-url: "https://youtu.be/MRM-1u-30JI"
 # Write a short, attention-grabbing description of your project.
 desc: >
   Our project optimizes a user’s investment portfolio based on given
