--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,6 @@
 (library
  (name FinalProject)
- (modules analytics questionnaire_types risk_profile stock_cache optimizer refresh)
+ (modules analytics questionnaire_types risk_profile stock_cache optimizer)
  (instrumentation (backend bisect_ppx))
  (libraries yojson cohttp-lwt-unix lwt.unix lwt_ssl)
  (wrapped false))
