--- a/test/dune
+++ b/test/dune
@@ -1,11 +1,9 @@
 (test
  (name test_stock)
+ (modules test_stock)
  (libraries ounit2 FinalProject bisect_ppx.runtime bisect_ppx.common))
 
 (test
- (name test_refresh)
- (libraries ounit2 FinalProject api lwt.unix bisect_ppx.runtime bisect_ppx.common))
-
-(test
  (name test_optimizer)
+ (modules test_optimizer)
  (libraries ounit2 FinalProject bisect_ppx.runtime bisect_ppx.common))
